# extract-todo

./: .changelog.yml  .flake8  .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  extract_todo.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  python-app.yml  python-publish.yml
extract_todo/: __main__.py  __version__.py  extractor.py
extract_todo/parser/: __init__.py  default_parser.py  parser_factory.py  python_parser.py
src/extract_todo/: __init__.py  __main__.py  __version__.py  extractor.py
src/extract_todo/parser/: default_parser.py  latex_parser.py  parser_factory.py  python_parser.py
tests/: test_extract_todo.py  test_filetypes.py  test_parser_factory.py
tests/files/: test.c  test.cpp  test.cs  test.go  test.h  test.hpp  test.java  test.js  test.py  test.rb  test.tex
