[bumpversion]
current_version = 0.2.2
commit = True
tag = True

[metadata]
description_file = README.rst
license_file = LICENSE.txt

[flake8]
ignore = E266, D101, D401
max-line-length = 80

[bumpversion:file:setup.py]
search = version={current_version}
replace = {new_version}

[bumpversion:file:extract_todo/__version__.py]
search = VERSION_STRING = {current_version}
replace = {new_version}

