[bumpversion]
current_version = 0.2.4
commit = True
tag = True

[flake8]
ignore = E266, D101, D401
max-line-length = 80

[bumpversion:file:src/extract_todo/__version__.py]
search = VERSION_STRING = "{current_version}"
replace = {new_version}

[metadata]
name = extract-todo
version = attr: extract_todo.__version__
author = Jens Wilberg
author_email = jens_wilberg@outlook.com
description = A small tool to extract TODOs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = todo, extract
license = GPLv3
url = https://github.com/follnoob/extrect-todo
project_urls = 
	Bug Tracker = https://github.com/follnoob/extract-todo/issues
classifiers = 
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Environment :: Console
	Intended Audience :: End Users/Desktop

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	extract-todo = extract_todo.__main__:main
