[flake8]
ignore = E266, D101, D401
max-line-length = 120

[metadata]
name = extract-todo
version = attr: extract_todo.__version__
author = Jens Wilberg
author_email = jens_wilberg@outlook.com
description = A small tool to extract TODOs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = todo, extract
license = GPLv3
url = https://github.com/follnoob/extrect-todo
project_urls = 
	Bug Tracker = https://github.com/follnoob/extract-todo/issues
classifiers = 
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Environment :: Console
	Intended Audience :: End Users/Desktop
install_requires =
        GitPython

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	extract-todo = extract_todo.__main__:main
